# movie-search-assignment

./: README.md  dataset.py  movie_search.ipynb  movie_search.py  pyproject.toml  requirements.txt
embeddings/: csv_hash.txt  plot_embeddings.pkl
tests/: test_movie_search.py
