[project]
name = "movie-search-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.8.0",
    "kagglehub>=0.3.12",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "sentence-transformers>=2.0.0",
    "tokenizers>=0.10.0",
    "torch>=1.9.0",
    "transformers>=4.6.0",
]
